--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
             <version>1.1.0</version>
         </dependency>
 
+        <!-- penympanannya pakai h2 -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -74,6 +75,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -122,9 +128,13 @@
     <profiles>
         <profile>
             <!-- Production mode is activated using -Pproduction -->
-            <id>production</id>
+           <id>production</id>
             <dependencies>
                 <!-- Exclude development dependencies from production -->
+                <dependency>
+                    <groupId>org.postgresql</groupId>
+                    <artifactId>postgresql</artifactId>
+                </dependency>
                 <dependency>
                     <groupId>com.vaadin</groupId>
                     <artifactId>vaadin-core</artifactId>
